# gkrellm

./: .gitignore  COPYRIGHT  Makefile  config.h.in  doxygen.conf  gkrellm.1  gkrellmv.h.in  meson.build  meson_options.txt  mingw-cross.txt  mingw32-cross.txt  mingw64-cross.txt  notes  todo.txt  win32-resource.rc.in
packaging/: net.gkrellm.app.desktop  net.gkrellm.app.xml
server/: Makefile  gkrellmd.conf  mail.c  main.c  monitor.c  plugins.c  sysdeps-unix.c  utils.c  win32-plugin.h
shared/: log.c
src/: alerts.c  battery.c  chart.c  clock.c  cpu.c  disk.c  fs.c  gkrellm-client.h  gkrellm-private-client.h  gkrellm-private-server.h  gkrellm-private.h  gkrellm-public-proto.h  gkrellm-server.h  gkrellm-sysdeps.h  gkrellm.h  gui.c  hostname.c  inet.c  krell.c  mail.c  main.c  mem.c  net.c  panel.c  pixops.c  plugins.c  proc.c  sensors.c  sysdeps-unix.c  uptime.c  win32-plugin-client.h  win32-plugin-server.h  win32-plugin.h  winops-gtk-mac.c  winops-win32.c  winops-x11.c
src/app/: assets.h  config.h  gui.c  gui.h  main.c  meson.build  notes  rendertest.c  rendertypes.h  theme.c  theme.h  widgets.h
src/builtins/: battery.c  clock.c  cpu.c  disk.c  fs.c  hostname.c  inet.c  mail.c  mem.c  net.c  proc.c  sensors.c  uptime.c
src/client/: alerts.c  battery.c  chart.c  client.c  clock.c  config.c  cpu.c  disk.c  fs.c  gui.c  inet.c  krell.c  mail.c  main.c  panel.c  pixops.c  plugins.c  proc.c  sensors.c  sysdeps-unix.c  uptime.c  utils-client.c  utils.c  win32-libgkrellm.c  win32-plugin.c  winops-gtk-mac.c  winops-win32.c  winops-x11.c
src/server/: mail.c  main.c  monitor.c  plugins.c  sysdeps-unix.c  utils.c  win32-libgkrellmd.c  win32-plugin.c
src/shared/: log-private.h  log.c  log.h  md5.h  utils.c
src/sysdeps/: bsd-common.c  bsd-net-open.c  core.c  darwin.c  dragonfly.c  freebsd.c  gtop.c  inet.h  linux.c  netbsd.c  openbsd.c  sensors-common.c  solaris.c  win32-sensors.c  win32.c
