option(
  'lmsensors',
  type : 'combo',
  value : 'auto',
  choices : ['auto', 'true', 'false'],
  description : 'Enable HUD lmsensors support.'
)
option(
  'onlyserver',
  type : 'boolean',
  value : 'false',
  description : 'only build server.'
)
option(
  'use_libgtop',
  type : 'boolean',
  value : 'false',
  description : 'use libgtop.'
)
option(
  'enable_nls',
  type : 'boolean',
  value : 'true',
  description : 'enable translations.'
)
